# team-3

./: .coverage  .env.example  pyproject.toml  pyrightconfig.json
frontend/: package.json
frontend/lib/: api.ts
src/exams/: config.py
src/exams/api/v1/: router.py
src/exams/api/v1/endpoints/: sessions.py
src/exams/models/: __init__.py  enums.py  session.py
src/exams/schemas/: session.py
src/exams/services/: session.py
tests/: conftest.py
tests/api/: test_services.py  test_sessions.py
